# PyMut4SE

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  generate.sh  pyproject.toml
.github/workflows/: ci.yml
data/quix_bugs/python_programs/: breadth_first_search.py  detect_cycle.py  find_first_in_sorted.py  flatten.py  get_factors.py  kheapsort.py  lcs_length.py  lis.py  longest_common_subsequence.py  max_sublist_sum.py  minimum_spanning_tree.py  next_permutation.py  pascal.py  reverse_linked_list.py  sieve.py  subsequences.py  topological_ordering.py  wrap.py
database/: db_setup_quixbugs.py
docs/: api.md  execution.md  exploration.md  getting-started.md  models.md  mutation.md  operators.md
notebook/: example.ipynb  example_fastapi_demo.ipynb  example_requests_demo.ipynb
src/datasets/quixbugs/: config_generator.py
src/pymut4se/: __init__.py
src/pymut4se/api/: __init__.py  operators.py  statistics.py  workspace.py
src/pymut4se/execution/: __init__.py  environment.py  execution.py  execution_engine.py  parallel_execution.py  python_execution.py  standalone_execution.py
src/pymut4se/exploration/: project.py  (+5 more)
tests/: conftest.py  test_api.py  test_constant_replacement_mutation.py  test_control_replacement_mutation.py  test_delete_decorator_mutation.py  test_delete_mutations.py  test_execution_environment.py  test_execution_outputs.py  test_exploration.py  test_exploration_utils.py  test_function_inputs.py  test_generic_mutations.py  test_logical_connector_mutation.py  test_models.py  test_mutation.py  test_mutation_build.py  test_optional_parameter_mutation.py  test_parallel_execution.py  test_related_test_execution.py  test_requirements.py  test_return_pass_mutation.py  test_standalone_execution.py  test_swap_arguments_mutation.py  test_unary_mutation.py
tools/: coverage_badge.py
(+74 files in other folders)
